--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -10,7 +10,6 @@
     		<ul>
         		<li><a href="/">Home</a></li>
 	        	<li><a href="/about">About</a></li>
-        		<li><a href="/cv">CV</a></li>
         		<li><a href="/project">Project</a></li>
     		</ul>
 		</nav>
@@ -19,8 +18,8 @@
 		</div><!-- /.container -->
 		<footer>
     		<ul>
-        		<li><a href="mailto:anh.nguyent93@gmail.com">email</a></li>
-        		<li><a href="https://github.com/anhnguyent93">github.com/anhnguyent93</a></li>
+        		<li><a href="mailto:anh.nguyent93@gmail.com">Email</a></li>
+        		<li><a href="https://github.com/anhnguyent93">Github</a></li>
 			</ul>
 		</footer>
 	</body>
